--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.taufik.kotlinhero">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,12 +10,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.KotlinHero">
-        <activity android:name=".activity.main.MainActivity"/>
+        android:theme="@style/Theme.KotlinHero"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".activity.profile.ProfileActivity"
+            android:theme="@style/ActionBarTheme"/>
+        <activity android:name=".activity.main.MainActivity" />
         <activity android:name=".activity.splashscreen.SplashscreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
