--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,18 +47,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // Network
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
     // View Model
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.0"
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
-    // Circle image
+    // Circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
