--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Libs
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Network
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -61,4 +65,7 @@ dependencies {
 
     // Circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Android youtube player
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 }
