--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/ActionBarTheme" />
         <activity
-            android:name=".activity.main.MainActivity"
+            android:name="com.taufik.kotlinhero.ui.activity.main.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.splashscreen.SplashscreenActivity"
+            android:name="com.taufik.kotlinhero.ui.activity.splashscreen.SplashscreenActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
