Adding fragment for: kotlin basic, kotlin oop, kotlin generic, kotlin collection, kotlin coroutine, and kotlin collection.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/ActionBarTheme" />
         <activity
-            android:name="com.taufik.kotlinhero.ui.activity.MainActivity"
+            android:name="com.taufik.kotlinhero.ui.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.taufik.kotlinhero.ui.activity.SplashscreenActivity"
+            android:name="com.taufik.kotlinhero.ui.SplashscreenActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
