--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 *.rar
 
 # IntelliJ
+*.iml
 .idea
 .idea/workspace.xml
 .idea/tasks.xml
@@ -32,6 +33,7 @@
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+
 # Android Studio 3 in .gitignore file.
 .idea/caches/build_file_checksums.ser
 .idea/modules.xml
@@ -58,9 +60,6 @@ out/
 
 # Gradle files
 .gradle/
-.gradle/7.0.2/executionHistory/executionHistory.lock
-.gradle/7.0.2/fileHashes/fileHashes.bin
-.gradle/7.0.2/fileHashes/fileHashes.lock
 build/
 
 # Local configuration file (sdk path, etc)
@@ -109,6 +108,7 @@ lint/intermediates/
 lint/generated/
 lint/outputs/
 lint/tmp/
+
 # lint/reports/
 .DS_Store
 /.idea/navEditor.xml
