--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.0'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5")
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha01")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -32,7 +32,7 @@ buildscript {
         coroutineCoreVersion = '1.5.0'
         coroutineAndroidVersion = '1.5.2'
         navigationFragmentVersion = '2.3.5'
-        navigationUIVersion = '2.3.5'
+        navigationUIVersion = '2.4.0'
     }
 }
 
