--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha01")
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
