--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.6.21'
+    ext.kotlin_version = '1.7.21'
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.4.0'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2")
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,20 +19,21 @@ buildscript {
         coreVersion = '1.3.2'
         constraintLayoutVersion = '2.0.4'
         junitVersion = '4.13.2'
-        junitExtversion = '1.1.3'
-        espressoVersion = '3.4.0'
+        junitExtversion = '1.1.5'
+        espressoVersion = '3.5.1'
         androidTestVersion = '1.4.0'
         materialVersion = '1.3.0'
         recyclerViewVersion = '1.1.0'
-        glideVersion = '4.13.1'
+        glideVersion = '4.14.2'
         circleImageVersion = '3.1.0'
         androidYoutubePlayerVersion = '10.0.5'
         lifeCycleVersion = '2.2.0'
-        lifeCycleJava8Support = '2.4.1'
+        lifeCycleJava8Support = '2.5.1'
         coroutineCoreVersion = '1.5.0'
-        coroutineAndroidVersion = '1.6.0'
-        navigationFragmentVersion = '2.4.2'
-        navigationUIVersion = '2.4.2'
+        coroutineAndroidVersion = '1.6.4'
+        navigationFragmentVersion = '2.5.3'
+        navigationUIVersion = '2.5.3'
+        roomVersion = '2.5.0'
     }
 }
 
