--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,13 @@ buildscript {
         google()
         jcenter()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.4.0'
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,7 +27,7 @@ buildscript {
         androidTestVersion = '1.4.0'
         materialVersion = '1.3.0'
         recyclerViewVersion = '1.1.0'
-        glideVersion = '4.14.2'
+        glideVersion = '4.15.1'
         circleImageVersion = '3.1.0'
         androidYoutubePlayerVersion = '10.0.5'
         lifeCycleVersion = '2.2.0'
@@ -34,6 +37,11 @@ buildscript {
         navigationFragmentVersion = '2.5.3'
         navigationUIVersion = '2.5.3'
         roomVersion = '2.5.0'
+        retrofitVersion = '2.9.0'
+        okHttpVersion = '4.10.0'
+        navKTXVersion = '2.5.3'
+        androidKTXVersion = '1.5.7'
+        hiltVersion = '2.44'
     }
 }
 
