Add shimmer library.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,7 @@ dependencies {
     // Hilt
     implementation "com.google.dagger:hilt-android:$hiltVersion"
     kapt "com.google.dagger:hilt-compiler:$hiltVersion"
+
+    // Shimmer layout
+    implementation "com.facebook.shimmer:shimmer:$shimmerVersion"
 }
