--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ buildscript {
         navKTXVersion = '2.5.3'
         androidKTXVersion = '1.5.7'
         hiltVersion = '2.44'
+        shimmerVersion = '0.5.0'
     }
 }
 
